feature: implement calls to check with bgtoll validity of vehicle vignettes